--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
            <div class="box-content">
             <h2>Cloth</h2>
             <div class="box-img" style="background-image: url('./Image/box1_image.jpg');"></div>
-            <p>See More</p>
+            <p class="See-more">See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
                 <div class="box-img" style="background-image: url('./Image/box2_image.jpg');"></div>
-                <p>See More</p>
+                <p class="See-more">See More</p>
                </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Furniture</h2>
                 <div class="box-img" style="background-image: url('./Image/box3_image.jpg');"></div>
-                <p>See More</p>
+                <p class="See-more">See More</p>
                </div>
         </div>
         <div class="box">
             <div class="box-content">
             <h2>Electronics</h2>
             <div class="box-img" style="background-image: url('./Image/box4_image.jpg');"></div>
-            <p>See More</p>
+            <p class="See-more">See More</p>
            </div>
         </div>
         
@@ -104,28 +104,28 @@
            <div class="box-content">
             <h2>Beauty picks</h2>
             <div class="box-img" style="background-image: url('./Image/box5_image.jpg');"></div>
-            <p>See More</p>
+            <p class="See-more">See More</p>
            </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>Pet Care</h2>
                 <div class="box-img" style="background-image: url('./Image/box6_image.jpg');"></div>
-                <p>See More</p>
+                <p class="See-more">See More</p>
                </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h2>New Arrival in toys</h2>
                 <div class="box-img" style="background-image: url('./Image/box7_image.jpg');"></div>
-                <p>See More</p>
+                <p class="See-more">See More</p>
                </div>
         </div>
         <div class="box">
             <div class="box-content">
             <h2>Discover Fasion Trends</h2>
             <div class="box-img" style="background-image: url('./Image/box8_image.jpg');"></div>
-            <p>See More</p>
+            <p class="See-more">See More</p>
            </div>
         </div>
     </div>
